# redfish/openapi/dmtf/ComputerSystem.v1_26_0.yaml
@@ -89,6 +89,11 @@ components:
             - null
           readOnly: true
           x-longDescription: This property shall contain the power state of the system.
+        ProcessorSummary:
+          $ref: '#/components/schemas/ComputerSystem_v1_26_0_ProcessorSummary'
+          description: The central processors of the system in general detail.
+          x-longDescription: This property shall describe the processors for this
+            resource.
         SerialNumber:
           description: The serial number for this system.
           nullable: true
@@ -269,6 +274,68 @@ components:
       type: object
       x-longDescription: This type shall contain properties that describe the central
         memory for a system.
+      x-patternProperties:
+        ^([a-zA-Z_][a-zA-Z0-9_]*)?@(odata|Redfish|Message)\.[a-zA-Z_][a-zA-Z0-9_]*$:
+          description: This property shall specify a valid odata or Redfish property.
+    ComputerSystem_v1_26_0_ProcessorSummary:
+      additionalProperties: false
+      description: The processor of the system in general detail.
+      properties:
+        CoreCount:
+          description: The number of processor cores in the system.
+          minimum: 0
+          nullable: true
+          readOnly: true
+          type: integer
+          x-longDescription: This property shall contain the number of processor cores
+            in the system.
+        Count:
+          description: The number of physical processors in the system.
+          minimum: 0
+          nullable: true
+          readOnly: true
+          type: integer
+          x-longDescription: This property shall contain the number of physical processors
+            in the system.
+        LogicalProcessorCount:
+          description: The number of logical processors in the system.
+          minimum: 0
+          nullable: true
+          readOnly: true
+          type: integer
+          x-longDescription: This property shall contain the number of logical processors
+            in the system.
+        Model:
+          description: The processor model for the primary or majority of processors
+            in this system.
+          nullable: true
+          readOnly: true
+          type: string
+          x-longDescription: This property shall contain the processor model for the
+            primary or majority of processors in this system.
+        Status:
+          $ref: Resource.yaml#/components/schemas/Resource_Status
+          deprecated: true
+          description: The status and health of the resource and its subordinate or
+            dependent resources.
+          x-deprecatedReason: This property has been deprecated. Please migrate to
+            use Status in the individual Processor resources.
+          x-longDescription: This property shall contain any status or health properties
+            of the resource.
+        'Status@Redfish.Deprecated':
+          description: Please migrate to use Status in the individual Processor resources
+          type: string
+        ThreadingEnabled:
+          description: An indication of whether the system supports multithreading
+            or hyperthreading on the processors.
+          nullable: true
+          readOnly: true
+          type: boolean
+          x-longDescription: This property shall indicate whether the system supports
+            multithreading or hyperthreading on the processors.
+      type: object
+      x-longDescription: This type shall contain properties that describe the processors
+        for a system.
       x-patternProperties:
         ^([a-zA-Z_][a-zA-Z0-9_]*)?@(odata|Redfish|Message)\.[a-zA-Z_][a-zA-Z0-9_]*$:
           description: This property shall specify a valid odata or Redfish property.
